--- a/css/countries.css
+++ b/css/countries.css
@@ -1,3 +1,8 @@
+#countries{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
 .country {
     border: 1px solid red;
     margin: 10px;
